<resources>
    <string name="app_name">Projeto Mercado Livre</string>
    <string name="search_text">Buscar no Mercado Livre</string>
    <string name="product_model">Volkswagen Fox 1.6 Connect</string>
    <string name="product_year">2019</string>
    <string name="product_km">37.000 Km</string>
    <string name="product_city">São Paulo</string>
    <string name="product_price">R$ 42.200,00</string>
    <string name="input_text">Buscar no Mercado Livre</string>
    <string name="shopping_cart">Cart Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="backbutton_icon">Back Icon</string>




</resources>